--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@hashgraph/sdk": "2.0.13",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
     "express": "~4.16.1",
     "morgan": "~1.9.1"
   }
