--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "@hashgraph/sdk": "2.0.13",
+    "@hashgraph/sdk": "^2.0.13",
     "axios": "^0.21.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "prompt-sync": "^4.2.0"
   }
 }
