--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "mon": "nodemon ./bin/www/"
   },
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-react-app": "^3.1.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
