--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
+    "multer": "^1.4.3",
     "nodemon": "^2.0.12"
   }
 }
