--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "blockchain-4",
-  "version": "0.0.0",
+  "description": "Document Anchoring using Blockchain",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
@@ -15,5 +16,14 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.3",
     "nodemon": "^2.0.12"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/CodedByHasan/Blockchain-4.git"
+  },
+  "bugs": {
+    "url": "https://github.com/CodedByHasan/Blockchain-4/issues"
+  },
+  "homepage": "https://github.com/CodedByHasan/Blockchain-4#readme"
 }
