--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "mon": "nodemon ./bin/www/"
   },
   "dependencies": {
+    "axios": "^0.21.4",
     "babel-cli": "^6.26.0",
     "babel-preset-react-app": "^3.1.2",
     "cookie-parser": "~1.4.4",
