--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "form-data": "^4.0.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.3",
     "nodemon": "^2.0.12"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/CodedByHasan/Blockchain-4.git"
