ESLint config updates
Updated to use Allman brace style instead of 1tbs
Installed ESLint React plugin
Added new config for react in `src` folder
Updated linting script

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,10 @@
             "always"
         ],
         "curly": "error",
-        "brace-style": "error",
+        "brace-style": [
+            "error",
+            "allman"
+        ],
         "camelcase": "error",
         "eol-last": [
             "error",
