--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "nodemon": "^2.0.12"
   },
   "devDependencies": {
-    "eslint": "^7.32.0"
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.26.1"
   },
   "repository": {
     "type": "git",
