--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
-    "morgan": "~1.9.1",
-    "prompt-sync": "^4.2.0",
+    "express-promise-router": "^4.1.0",
     "form-data": "^4.0.0",
+    "morgan": "~1.9.1",
     "multer": "^1.4.3",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "prompt-sync": "^4.2.0"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
